--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^15.0.2",
     "react-hyperscript": "^2.4.0",
     "react-redux": "^4.4.5",
+    "recharts": "^1.0.0-beta.6",
     "redux": "^3.5.2",
     "redux-logger": "^2.3.1",
     "redux-thunk": "^1.0.2",
