Add metamask estimate

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "ethjs": "^0.2.4",
     "metamascara": "^1.1.1",
+    "percentile": "^1.2.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-hyperscript": "^2.4.0",
